--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -6,3 +6,4 @@
 # CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=1
+CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=6
